updated gradlew, and configured bootBuildImage in build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -34,9 +34,15 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
+tasks.named("bootBuildImage") {
+	builder = "dashaun/builder:tiny"
+}
+
 bootBuildImage {
     imageName = "${project.name}"
-    environment = ["BP_JVM_VERSION" : "17.*", "BP_NATIVE_IMAGE" : "false"]
+	environment = ["BP_JVM_VERSION" : "17.*", "BP_NATIVE_IMAGE" : "false" // native image not working well on mac
+//                   , BP_LIVE_RELOAD_ENABLED : "true"  // when enabled, native image won't be build
+	]
 
     docker {                                                   
         publishRegistry {                                        
