added tiltfile, k8s files

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ ext {
 
 dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-config-server'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
@@ -36,12 +37,14 @@ tasks.named('test') {
 
 tasks.named("bootBuildImage") {
 	builder = "dashaun/builder:tiny"
+	buildpacks = ["urn:cnb:builder:paketo-buildpacks/java", "gcr.io/paketo-buildpacks/health-checker:latest"]
 }
 
 bootBuildImage {
     imageName = "${project.name}"
 	environment = ["BP_JVM_VERSION" : "17.*", "BP_NATIVE_IMAGE" : "false" // native image not working well on mac
 //                   , BP_LIVE_RELOAD_ENABLED : "true"  // when enabled, native image won't be build
+			, "BP_HEALTH_CHECKER_ENABLED" : "true"
 	]
 
     docker {                                                   
